# ansible_playbook.raspi_bridge-segment-overlapping

./: .envrc.example  .gitignore  README.md  playbook.yml  pyproject.toml
inventories/: home.yml.example
roles/quasi_bridge/defaults/: main.yml
roles/quasi_bridge/tasks/: assertion.yml  avahi.yml  main.yml  setup_dhcpd.yml  setup_kparam_interfaces.yml
roles/quasi_bridge/templates/: 01routing-if-pre-up.sh.j2  dhcpcd.conf.j2  dhcpd.conf.j2  isc-dhcp-server.override.j2
