[tool.poetry]
name = "ansible_playbook.raspi_bridge-segment-overlapping"
version = "0.1.0"
description = "L2 Bridge for Wi-Fi not supporting WDS"
authors = ["Masumi Kanai <masumi.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "5.5.0"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
